--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -24,8 +24,4 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r
-
-      - name: Run tests
-        run: |
-          pytest
+          pip install
